# LLenergyMeasure

./: .dockerignore  .env.example  .gitignore  .lem-config.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  INSTALLATION.md  LICENSE  MANUAL_TESTING.md  Makefile  QUICKSTART.md  README.md  REFACTORING_STRATEGY.md  ROADMAP.md  TESTING.md  TODO.md  USAGE_GUIDE.md  V3_IMPLEMENTATION_PLAN.md  WEBAPP_ROADMAP.md  docker-compose.web.yml  docker-compose.yml  emissions.csv.bak  env.example  pyproject.toml  setup.py  setup.sh  uat_campaign.yaml
.devcontainer/: devcontainer.json
.devcontainer/api/: devcontainer.json  docker-compose.yml
.devcontainer/cli/: devcontainer.json
.devcontainer/tensorrt/: devcontainer.json
.devcontainer/vllm/: devcontainer.json
.devcontainer/web/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  gpu-ci.yml  release.yml  tests.yml
.planning/: ARCHITECTURE-DISCUSSION.md  M1-MILESTONE-AUDIT.md  MILESTONE-CONTEXT.md  MILESTONES.md  PRODUCT-VISION-DISCUSSION.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: campaign-resume-flow.md  container-strategy-research.md
.planning/milestones/: v1.17.0-MILESTONE-AUDIT.md  v1.17.0-REQUIREMENTS.md  v1.17.0-ROADMAP.md  v1.18.0-MILESTONE-AUDIT.md  v1.18.0-REQUIREMENTS.md
.planning/phases/: 02-CONTEXT.md  02.2-CONTEXT.md
.planning/research/: ARCHITECTURE.md  DECISION-AUDIT.md  FEATURES.md  PITFALLS.md  README.md  STACK.md  SUMMARY.md  UNIFIED-API-RESEARCH.md  competitive-landscape.md  energy-measurement-tools.md  industry-patterns.md  web-platform-patterns.md
.product/: .continue-here.md  CLAUDE.md  CODEBASE_PROPAGATION_AUDIT.md  NEEDS_ADDRESSING.md  README.md  REQUIREMENTS.md  RESEARCH-LANDSCAPE.md  RESEARCH_PROPAGATION_AUDIT.md  ROADMAP.md  TODO.md
.product/decisions/: access-control.md  additional-backends.md  architecture.md  backward-compatibility.md  carbon-intensity.md  cli-ux.md  config-architecture.md  dataset-handling.md  docker-execution.md  documentation-strategy.md  error-handling.md  experiment-isolation.md  experiment-study-architecture.md  flops-estimation.md  future-versions.md  hpc-slurm.md  installation.md  live-observability.md  local-result-navigation.md  lora-adapter-support.md  multi-gpu.md  open-questions.md  output-storage.md  product-vision.md  progressive-disclosure.md  release-process.md  reproducibility.md  result-schema-migration.md  study-execution-model.md  study-resume.md  testing-strategy.md  versioning-roadmap.md  warmup-strategy.md  web-platform.md  zero-config-defaults.md
.product/designs/: CLAUDE.md  architecture.md  carbon-co2.md  cli-commands.md  config-model.md  dataset.md  docker-execution.md  energy-backends.md  experiment-config.md  experiment-isolation.md  library-api.md  observability.md  packaging.md  reproducibility.md  result-schema.md  schema-migration.md  study-resume.md  study-yaml.md  testing.md  user-config.md  web-platform.md
.product/preservation_audit/: INDEX.md
.product/research/: 01-lm-eval-harness.md  02-mlflow-architecture.md  03-codecarbon-zeus-energy.md  04-deployment-patterns.md  05-zeus-deep-dive.md  06-llenergymeasure-vs-zeus.md  07-ml-energy-ecosystem.md  08-energy-plugin-architecture.md  09-broader-landscape.md  10-sweep-validation-patterns.md  11-peer-cli-patterns.md  12-result-schemas.md  13-execution-isolation-patterns.md  14-flops-warmup-lora-multiGPU.md  15-config-architecture-patterns.md  16-execution-profiles-patterns.md
api/: __init__.py  alembic.ini  config.py  main.py
api/db/: __init__.py  database.py  models.py
api/routes/: __init__.py  auth.py  benchmarks.py  models.py
api/schemas/: __init__.py  auth.py  benchmarks.py
api/services/: __init__.py  auth_service.py  benchmark_service.py
configs/: README.md  example_config.yaml  example_pytorch.yaml  example_tensorrt.yaml  example_vllm.yaml  test_all_decoder_params.yaml  test_lora.yaml  test_prompts.txt  test_pytorch_streaming.yaml  test_streaming.yaml  test_tensorrt_streaming.yaml  test_tiny.yaml  test_vllm_streaming.yaml
configs/examples/: campaign_example.yaml  pytorch_example.yaml  tensorrt_example.yaml  vllm_example.yaml
configs/test_grid/: pytorch_batch_size_1.yaml  pytorch_batch_size_2.yaml  pytorch_batch_size_4.yaml
docker/: Dockerfile.base  Dockerfile.pytorch  Dockerfile.tensorrt  Dockerfile.vllm
docs/: backends.md  campaigns.md  cli.md  deployment.md  methodology.md  quickstart.md  strategy.md  web-env-setup.md
examples/: 01_basic_experiment.py  02_cli_usage.sh  03_profiling_example.py  04_caching_example.py  05_multi_model_comparison.py  06_quantization_comparison.py  07_custom_config.py  08_results_analysis.py  09_error_handling.py  10_advanced_workflow.py  README.md  complete_workflow.py  migrate_from_v1.py  quantization_comparison.py  simple_experiment.py
experiment_core_utils/: README.md
experiment_orchestration_utils/: README.md
persistent_progress_trackers/: README.md
scripts/: api-entrypoint.sh  dev-entrypoint.sh  docker-experiment.sh  entrypoint.sh  generate_config_docs.py  generate_invalid_combos_doc.py  generate_param_matrix.py  migrate_config.py  run-runtime-tests.sh  runtime-test-orchestrator.py  test_cuda_visible_devices.py  test_multi_gpu_parallelization.py  verify_installation.py
src/llenergymeasure/: README.md  __init__.py  _api.py  constants.py  exceptions.py  logging.py  progress.py  protocols.py  resilience.py  security.py
src/llm_bench/: __init__.py  (+6 more)
test_configs/: batching_dynamic.yaml  batching_sorted.yaml  batching_static.yaml  combined_full_features.yaml  decoder_creative.yaml  decoder_deterministic.yaml  decoder_presets.yaml  grid_base.yaml  sharding_pipeline.yaml  sharding_tensor_parallel.yaml  traffic_constant.yaml  traffic_poisson.yaml
tests/: README.md  __init__.py  conftest.py  conftest_backends.py  fakes.py
web/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
(+831 files in other folders)
