[tool.poetry]
name = "llm-energy-measure"
version = "1.16.2"
description = "LLM inference efficiency measurement framework"
authors = ["henrycgbaker <henry.c.g.baker@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_energy_measure", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
transformers = "^4.49.0"
accelerate = "^1.4.0"
datasets = "^3.0.0"
codecarbon = "^2.8.0"
pydantic = "^2.0"
loguru = "^0.7.0"
typer = "^0.15.0"
pynvml = "^12.0.0"
calflops = "^0.2.0"
schedule = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
ruff = "^0.8.0"
mypy = "^1.0"
pre-commit = "^3.0"
types-pyyaml = "^6.0.12.20250915"
commitizen = "^4.0"

[tool.poetry.scripts]
llm-energy-measure = "llm_energy_measure.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# Disable checks that fail on untyped third-party libs (torch, transformers)
disallow_untyped_calls = false
# Allow unused type: ignore comments (needed for cross-environment compatibility)
warn_unused_ignores = false
exclude = [
    "experiment_core_utils",
    "experiment_orchestration_utils",
    "configs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.16.2"
version_files = ["VERSION", "pyproject.toml:tool.poetry.version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = false
bump_pattern = "^(feat|fix|refactor|perf|revert)"
bump_map = { feat = "MINOR", fix = "PATCH", refactor = "PATCH", perf = "PATCH", revert = "PATCH" }
